// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/UserInfoHeader Maximum Infos 1`] = `
<header
  className="pt-8 pb-16 sm:pb-20 md:pb-28"
>
  <div
    className="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6 md:gap-8 relative pl-16 sm:pl-24 md:pl-28"
  >
    <div
      className="absolute top-0 left-0"
    >
      <span
        className="inline-block shadow rounded-full"
      >
        <span
          className="inline-block align-middle rounded-full border border-gray-50"
          role="img"
          style={
            Object {
              "height": 49,
              "width": 49,
            }
          }
        >
          <svg
            fill="none"
            height={48}
            viewBox="0 0 80 80"
            width={48}
            xmlns="http://www.w3.org/2000/svg"
          >
            <mask
              height={80}
              id="mask0"
              mask-type="alpha"
              maskUnits="userSpaceOnUse"
              width={80}
              x={0}
              y={0}
            >
              <rect
                fill="white"
                height={80}
                rx={160}
                width={80}
              />
            </mask>
            <g
              mask="url(#mask0)"
            >
              <rect
                fill="#8330FF"
                height={10}
                width={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                y={10}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                y={20}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={50}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={60}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                y={70}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={20}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={20}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={30}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={20}
                y={40}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={20}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
                y={60}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={20}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={40}
                y={10}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={40}
                y={20}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={40}
                y={30}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={40}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
                y={50}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={40}
                y={60}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={40}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={10}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={20}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={60}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={40}
              />
              <rect
                fill="#B4B4C7"
                height={10}
                width={10}
                x={60}
                y={50}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={60}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={10}
                y={10}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={10}
                y={20}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={10}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={10}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={10}
                y={50}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={10}
                y={60}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={70}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={30}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={30}
                y={20}
              />
              <rect
                fill="#F2F3F8"
                height={10}
                width={10}
                x={30}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
                y={40}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={30}
                y={50}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
                y={60}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={30}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={50}
                y={10}
              />
              <rect
                fill="#9695AE"
                height={10}
                width={10}
                x={50}
                y={20}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
                y={30}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={50}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={50}
                y={50}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={50}
                y={60}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={50}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={20}
              />
              <rect
                fill="#9695AE"
                height={10}
                width={10}
                x={70}
                y={30}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={40}
              />
              <rect
                fill="#1E1A5A"
                height={10}
                width={10}
                x={70}
                y={50}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={70}
                y={60}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={70}
                y={70}
              />
            </g>
          </svg>
        </span>
      </span>
    </div>
    <div
      className="flex-grow flex flex-wrap gap-x-6 gap-y-0"
    >
      <h1
        className="text-xl sm:text-2xl lg:text-3xl font-bold font-headline leading-tight w-full order-1 pt-1 sm:pt-0"
      >
        Louis Dieudonné de Bourbon
      </h1>
      <div
        className="w-full mt-3 order-3 sm:order-2"
      >
        <p
          className="max-w-prose text-sm sm:text-base"
        >
          Louis XIV, also known as Louis the Great or the Sun King, was King of France from 14 May 1643 until his death in 1715.
        </p>
      </div>
      <a
        className="text-purple hover:text-blue transition-colors inline-block order-2 sm:order-3 mt-0 sm:mt-3"
        href="/accounts/looee14"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        @
        looee14
      </a>
      <a
        className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset break-all inline-block order-4 sm:order-5 mt-3"
        href="https://www.webanddata.com/suburl/login"
        rel="noopener noreferrer"
        target="_blank"
      >
        www.webanddata.com/suburl/login
      </a>
    </div>
    <div
      className="md:mt-12 self-start flex flex-wrap md:flex-nowrap gap-4 sm:gap-8 justify-self-end items-center"
    >
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          12.342
        </span>
        <span>
          Sensor
          en
        </span>
      </div>
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          11 Mio.
        </span>
        <span>
          Messwert
          e
        </span>
      </div>
    </div>
  </div>
  <div
    className="pl-16 sm:pl-24 md:pl-28"
  >
    <div
      className="w-full order-last mt-4"
    >
      <button
        className="inline-block font-headline transition text-base sm:text-lg rounded-none px-3 sm:px-4 py-1.5 sm:py-2 cursor-pointer focus-offset focus:ring-green border border-purple hover:bg-opacity-10 hover:bg-green hover:border-green"
        onClick={[Function]}
        type="button"
      >
        Account editieren
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots UI Elements/UserInfoHeader Minimal Infos 1`] = `
<header
  className="pt-8 pb-16 sm:pb-20 md:pb-28"
>
  <div
    className="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6 md:gap-8 relative pl-16 sm:pl-24 md:pl-28"
  >
    <div
      className="absolute top-0 left-0"
    >
      <span
        className="inline-block shadow rounded-full"
      >
        <span
          className="inline-block align-middle rounded-full border border-gray-50"
          role="img"
          style={
            Object {
              "height": 49,
              "width": 49,
            }
          }
        >
          <svg
            fill="none"
            height={48}
            viewBox="0 0 80 80"
            width={48}
            xmlns="http://www.w3.org/2000/svg"
          >
            <mask
              height={80}
              id="mask0"
              mask-type="alpha"
              maskUnits="userSpaceOnUse"
              width={80}
              x={0}
              y={0}
            >
              <rect
                fill="white"
                height={80}
                rx={160}
                width={80}
              />
            </mask>
            <g
              mask="url(#mask0)"
            >
              <rect
                fill="#8330FF"
                height={10}
                width={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                y={10}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                y={20}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={50}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                y={60}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                y={70}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={20}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={20}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={20}
                y={30}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={20}
                y={40}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={20}
                y={50}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={20}
                y={60}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={20}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={40}
                y={10}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={40}
                y={20}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={40}
                y={30}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={40}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={40}
                y={50}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={40}
                y={60}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={40}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={10}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={20}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={60}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={40}
              />
              <rect
                fill="#B4B4C7"
                height={10}
                width={10}
                x={60}
                y={50}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={60}
                y={60}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={60}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={10}
                y={10}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={10}
                y={20}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={10}
                y={30}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={10}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={10}
                y={50}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={10}
                y={60}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={10}
                y={70}
              />
              <rect
                fill="#636188"
                height={10}
                width={10}
                x={30}
                y={10}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={30}
                y={20}
              />
              <rect
                fill="#F2F3F8"
                height={10}
                width={10}
                x={30}
                y={30}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
                y={40}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={30}
                y={50}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={30}
                y={60}
              />
              <rect
                fill="#CFD0DC"
                height={10}
                width={10}
                x={30}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={50}
                y={10}
              />
              <rect
                fill="#9695AE"
                height={10}
                width={10}
                x={50}
                y={20}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={50}
                y={30}
              />
              <rect
                fill="#4A4878"
                height={10}
                width={10}
                x={50}
                y={40}
              />
              <rect
                fill="#8330FF"
                height={10}
                width={10}
                x={50}
                y={50}
              />
              <rect
                fill="#F9FCFD"
                height={10}
                width={10}
                x={50}
                y={60}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={50}
                y={70}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={10}
              />
              <rect
                fill="#0000C2"
                height={10}
                width={10}
                x={70}
                y={20}
              />
              <rect
                fill="#9695AE"
                height={10}
                width={10}
                x={70}
                y={30}
              />
              <rect
                fill="#46ECA1"
                height={10}
                width={10}
                x={70}
                y={40}
              />
              <rect
                fill="#1E1A5A"
                height={10}
                width={10}
                x={70}
                y={50}
              />
              <rect
                fill="#E7EAF2"
                height={10}
                width={10}
                x={70}
                y={60}
              />
              <rect
                fill="#100C53"
                height={10}
                width={10}
                x={70}
                y={70}
              />
            </g>
          </svg>
        </span>
      </span>
    </div>
    <div
      className="flex-grow flex flex-wrap gap-x-6 gap-y-0"
    >
      <h1
        className="text-xl sm:text-2xl lg:text-3xl font-bold font-headline leading-tight w-full order-1 pt-1 sm:pt-0"
      >
        Louis Dieudonné de Bourbon
      </h1>
      <a
        className="text-purple hover:text-blue transition-colors inline-block order-2 sm:order-3 mt-0 sm:mt-3"
        href="/accounts/looee14"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        @
        looee14
      </a>
    </div>
    <div
      className="md:mt-12 self-start flex flex-wrap md:flex-nowrap gap-4 sm:gap-8 justify-self-end items-center"
    >
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          0
        </span>
        <span>
          Sensor
          en
        </span>
      </div>
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          0
        </span>
        <span>
          Messwert
          e
        </span>
      </div>
    </div>
  </div>
</header>
`;
